arm: imx6: tqma6: enable imx thermal
enable thermal support. This includes support for DM

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/configs/tqma6q_mba6_spi_defconfig
+++ b/configs/tqma6q_mba6_spi_defconfig
@@ -1,6 +1,10 @@
 CONFIG_ARM=y
 CONFIG_ARCH_MX6=y
+CONFIG_DM=y
 CONFIG_TARGET_TQMA6=y
 CONFIG_TQMA6Q=y
 CONFIG_TQMA6X_SPI_BOOT=y
 CONFIG_MBA6=y
+# CONFIG_DM_DEVICE_REMOVE is not set
+# CONFIG_DM_STDIO is not set
+CONFIG_DM_THERMAL=y
