--- a/configs/tqma6dl_mba6_mmc_defconfig
+++ b/configs/tqma6dl_mba6_mmc_defconfig
@@ -1,4 +1,8 @@
 CONFIG_ARM=y
 CONFIG_ARCH_MX6=y
+CONFIG_DM=y
 CONFIG_TARGET_TQMA6=y
 CONFIG_TQMA6DL=y
+# CONFIG_DM_DEVICE_REMOVE is not set
+# CONFIG_DM_STDIO is not set
+CONFIG_DM_THERMAL=y
